# SIO3

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  locustfile.py  readme.md  sio3.code-workspace
backend/: .env  Cargo.toml  readme.md  sio3.db  sio3.db-shm  sio3.db-wal  thunder-collection_SIO3.json
backend/migrations/: 20230827144641_initial_setup.down.sql  20230827144641_initial_setup.up.sql  20230827151054_news.down.sql  20230827151054_news.up.sql  20230828171232_mock_news.down.sql  20230828171232_mock_news.up.sql
backend/src/: main.rs
backend/src/controllers/: mod.rs  rest_news.rs
backend/src/infra/: postgresql.rs  sqlite.rs
backend/src/models/: news.rs  user.rs
backend/src/repos/: mod.rs  news.rs  user.rs
backend/src/repos/sqlite/: mod.rs  news.rs  user.rs
backend/src/services/: news.rs
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/lib/components/: Header.svelte  HeaderContent.svelte  LoginModal.svelte  NavbarContent.svelte  NewsCard.svelte  TaskCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/c/[competition_name]/: +page.svelte
frontend/src/routes/c/[competition_name]/dashboard/: +page.svelte
frontend/src/routes/c/[competition_name]/p/: +page.svelte
frontend/src/routes/c/[competition_name]/p/[problem_name]/: +server.js
