[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="4.3.1", features=["rustls"] }
sqlx = { version="0.7.1", features=["postgres", "runtime-tokio-rustls"] }
tokio = { version="1.32.0", features=["full"] }
